--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Thanks For Visiting <a href="Visit Again">HTML5 UP</a>.</span>
+						<span class="copyright">&copy; Thanks For Visiting <a href="Visit Again"></a>.</span>
 					</footer>
 
 			</div>
