--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
 						<p>Cybersecurity Analyst &nbsp;&bull;&nbsp; Governance Risk & Compliance &nbsp;&bull;&nbsp; IT Professional</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/jermaine-forbes-86749b2a7/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:Sebrof91@gmail.com" class="icon solid fa-envelope"><span class="label">Gmail</span></a></li>
 							</ul>
 						</nav>
 					</header>
