--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			.welcome-links {
+				font-size: 1.2em;
+				color: #ffffff;
+				background-color: #4caf50;
+				padding: 10px 15px;
+				border-radius: 5px;
+				margin: 10px 0;
+				text-decoration: none;
+			}
+			.welcome-links:hover {
+				background-color: #45a049;
+				text-decoration: underline;
+			}
+			.info-box {
+				border: 2px solid #4caf50;
+				padding: 15px;
+				border-radius: 5px;
+				background-color: #f9f9f9;
+				margin-top: 15px;
+				text-align: center;
+				font-size: 1.1em;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
@@ -28,6 +52,13 @@
 								<li><a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>								
 								<li><a href="mailto:Sebrof91@gmail.com" class="icon solid fa-envelope"><span class="label">Gmail</span></a></li>
 							</ul>
+							<ul>
+								<li><a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="welcome-links">PROJECTS</a></li>
+								<li><a href="https://jermainecyber.github.io/Portfolio/" class="welcome-links">GRC</a></li>
+							</ul>
+							<div class="info-box">
+								<p>CLICK LINK ABOVE TO SEE RELEVANT PROJECTS</p>
+							</div>
 						</nav>
 					</header>
 
@@ -45,3 +76,4 @@
 		</script>
 	</body>
 </html>
+
