--- a/index.html
+++ b/index.html
@@ -13,26 +13,36 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
 			.welcome-links {
+				display: inline-block;
 				font-size: 1.2em;
+				font-weight: bold;
 				color: #ffffff;
 				background-color: #4caf50;
-				padding: 10px 15px;
+				padding: 10px 20px;
 				border-radius: 5px;
-				margin: 10px 0;
+				margin: 10px 5px;
 				text-decoration: none;
+				transition: background-color 0.3s, transform 0.3s;
 			}
 			.welcome-links:hover {
 				background-color: #45a049;
-				text-decoration: underline;
+				text-decoration: none;
+				transform: scale(1.05);
 			}
 			.info-box {
 				border: 2px solid #4caf50;
 				padding: 15px;
 				border-radius: 5px;
-				background-color: #f9f9f9;
+				background-color: #ffffff;
+				color: #4caf50;
 				margin-top: 15px;
 				text-align: center;
 				font-size: 1.1em;
+				font-weight: bold;
+				width: 50%;
+				margin-left: auto;
+				margin-right: auto;
+				box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 			}
 		</style>
 	</head>
@@ -76,4 +86,3 @@
 		</script>
 	</body>
 </html>
-
