--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
 				background-color: #4caf50;
 				padding: 10px 20px;
 				border-radius: 5px;
-				margin: 10px 5px;
+				margin: 10px 10px; /* Added margin to avoid overlap */
 				text-decoration: none;
 				transition: background-color 0.3s, transform 0.3s;
+				opacity: 0.9; /* Slight transparency */
 			}
 			.welcome-links:hover {
 				background-color: #45a049;
 				text-decoration: none;
 				transform: scale(1.05);
+				opacity: 1; /* Remove transparency on hover */
 			}
 			.info-box {
 				border: 2px solid #4caf50;
 				padding: 15px;
 				border-radius: 5px;
-				background-color: #ffffff;
+				background-color: rgba(255, 255, 255, 0.8); /* Slight transparency */
 				color: #4caf50;
 				margin-top: 15px;
 				text-align: center;
