--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 				background-color: #4caf50;
 				padding: 10px 20px;
 				border-radius: 5px;
-				margin: 10px 10px; /* Added margin to avoid overlap */
+				margin: 10px 20px; /* Increased margin to avoid overlap */
 				text-decoration: none;
 				transition: background-color 0.3s, transform 0.3s;
-				opacity: 0.9; /* Slight transparency */
+				opacity: 0.7; /* Increased transparency */
 			}
 			.welcome-links:hover {
 				background-color: #45a049;
@@ -35,7 +35,7 @@
 				border: 2px solid #4caf50;
 				padding: 15px;
 				border-radius: 5px;
-				background-color: rgba(255, 255, 255, 0.8); /* Slight transparency */
+				background-color: rgba(255, 255, 255, 0.6); /* Increased transparency */
 				color: #4caf50;
 				margin-top: 15px;
 				text-align: center;
