--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				border-radius: 5px;
 				background-color: rgba(255, 255, 255, 0.6); /* Increased transparency */
 				color: #4caf50;
-				margin-top: 15px;
+				margin-top: 30px; /* Increased margin-top to add space before text */
 				text-align: center;
 				font-size: 1.1em;
 				font-weight: bold;
@@ -68,6 +68,7 @@
 								<li><a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="welcome-links">PROJECTS</a></li>
 								<li><a href="https://jermainecyber.github.io/Portfolio/" class="welcome-links">GRC</a></li>
 							</ul>
+							<br /> <!-- Added line break -->
 							<div class="info-box">
 								<p>CLICK LINK ABOVE TO SEE RELEVANT PROJECTS</p>
 							</div>
