--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
+			.welcome-links-container {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				gap: 20px; /* Space between buttons */
+				margin-top: 20px; /* Margin to separate from the above section */
+			}
 			.welcome-links {
 				display: inline-block;
 				font-size: 1.2em;
@@ -20,7 +27,6 @@
 				background-color: #4caf50;
 				padding: 10px 20px;
 				border-radius: 5px;
-				margin: 10px 20px; /* Increased margin to avoid overlap */
 				text-decoration: none;
 				transition: background-color 0.3s, transform 0.3s;
 				opacity: 0.7; /* Increased transparency */
@@ -64,10 +70,10 @@
 								<li><a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>								
 								<li><a href="mailto:Sebrof91@gmail.com" class="icon solid fa-envelope"><span class="label">Gmail</span></a></li>
 							</ul>
-							<ul>
-								<li><a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="welcome-links">PROJECTS</a></li>
-								<li><a href="https://jermainecyber.github.io/Portfolio/" class="welcome-links">GRC</a></li>
-							</ul>
+							<div class="welcome-links-container">
+								<a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="welcome-links">PROJECTS</a>
+								<a href="https://jermainecyber.github.io/Portfolio/" class="welcome-links">GRC</a>
+							</div>
 							<br /> <!-- Added line break -->
 							<div class="info-box">
 								<p>CLICK LINK ABOVE TO SEE RELEVANT PROJECTS</p>
