--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 				display: inline-block;
 				font-size: 1.2em;
 				font-weight: bold;
-				color: #ffffff;
+				color: #ff0000; /* Red text color */
 				background-color: #4caf50;
 				padding: 10px 20px;
 				border-radius: 5px;
 				text-decoration: none;
 				transition: background-color 0.3s, transform 0.3s;
-				opacity: 0.7; /* Increased transparency */
+				opacity: 1; /* No transparency */
 			}
 			.welcome-links:hover {
 				background-color: #45a049;
