--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				display: inline-block;
 				font-size: 1.2em;
 				font-weight: bold;
-				color: #ff0000; /* Red text color */
+				color: #ffa500; /* Orange text color */
 				background-color: #4caf50;
 				padding: 10px 20px;
 				border-radius: 5px;
