--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							</div>
 							<br /> <!-- Added line break -->
 							<div class="info-box">
-								<p>CLICK LINK ABOVE TO SEE RELEVANT PROJECTS</p>
+								<p>CLICK LINKS ABOVE TO SEE RELEVANT PROJECTS</p>
 							</div>
 						</nav>
 					</header>
