--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
 							<div class="welcome-links-container">
 								<a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="welcome-links">PROJECTS</a>
 								<a href="https://jermainecyber.github.io/Portfolio/" class="welcome-links">GRC</a>
+								<a href="#" class="welcome-links">RESUME</a>
 							</div>
 							<br /> <!-- Added line break -->
 							<div class="info-box">
-								<p>CLICK LINKS ABOVE TO SEE RELEVANT PROJECTS</p>
+								<p>CLICK LINKS ABOVE TO SEE RELEVANT PROJECTS & RESUME</p>
 							</div>
 						</nav>
 					</header>
