--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							</ul>
 							<div class="welcome-links-container">
 								<a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="welcome-links">PROJECTS</a>
-								<a href="https://jermainecyber.github.io/Portfolio/" class="welcome-links">GRC</a>
+								<a href="https://jermainecyber.github.io/GRC/" class="welcome-links">GRC</a>
 								<a href="#" class="welcome-links">RESUME</a>
 							</div>
 							<br /> <!-- Added line break -->
