--- a/index.html
+++ b/index.html
@@ -70,29 +70,40 @@
 								<li><a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>								
 								<li><a href="mailto:Sebrof91@gmail.com" class="icon solid fa-envelope"><span class="label">Gmail</span></a></li>
 							</ul>
+							<!-- Updated Button Links Section -->
 							<div class="welcome-links-container">
 								<a href="https://www.youtube.com/channel/UCsRWpf2Zvn16ndi0F6oM34A" class="welcome-links">PROJECTS</a>
 								<a href="https://jermainecyber.github.io/GRC/" class="welcome-links">GRC</a>
 								<a href="#" class="welcome-links">RESUME</a>
+								<a href="https://jermainecyber.github.io/GRC-PROJECTS/" class="welcome-links">NIST AUDIT- Lab</a>
 							</div>
 							<br /> <!-- Added line break -->
 							<div class="info-box">
-								<p>CLICK LINKS ABOVE TO SEE RELEVANT PROJECTS & RESUME</p>
+								<p>Explore my projects and resume by clicking the links above.</p>
 							</div>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Thanks For Visiting <a href="Visit Again"></a>.</span>
+						<span class="copyright">&copy; Thanks For Visiting. <a href="#">Visit Again</a>.</span>
 					</footer>
 
 			</div>
 		</div>
 		<script>
-			window.onload = function() { document.body.classList.remove('is-preload'); }
-			window.ontouchmove = function() { return false; }
-			window.onorientationchange = function() { document.body.scrollTop = 0; }
+			// Remove preload class on window load
+			window.onload = function() { 
+				document.body.classList.remove('is-preload'); 
+			}
+			// Prevent scrolling on touch devices
+			window.ontouchmove = function() { 
+				return false; 
+			}
+			// Scroll to top on orientation change
+			window.onorientationchange = function() { 
+				document.body.scrollTop = 0; 
+			}
 		</script>
 	</body>
 </html>
